# born-fwd-modeling

./: AlternativeVelocityModel.py  README.md  VelocityModel.py  alternative.py  functions.py  main.py  marcellus.py  options.txt  options_fullmodel.txt  options_oneshot.txt  plotting.py  quadpy_integration.py  reproduce_fig.py  reproduce_fig_sourcefile  sample_quadpy.py  sample_receiverfile  sample_sourcefile  simple_model.py  test.py  test_functions.py  test_velocity_model.py  units.py  velocity_model.py
bornfwd/: functions.py  io.py  main.py  marcellus.py  plotting.py  units.py  utils.py  velocity_model.py
cpp_fastfunctions/: CMakeLists.txt  fastfunctions.cpp
scripts/: create_sample_receiverfile.py  generate_recording_geometry.py  plot_geometry.py
tests/: test_born_modeling.py  test_source_file.py  test_stations_file.py
tests/test_inputs/: options_oneshot.txt  output_oneshot.txt  source  stations
